Fix CSS Overflow

--- a/public/css/codeStyle.less
+++ b/public/css/codeStyle.less
@@ -26,12 +26,18 @@
     right: 0;
     height: 100%;
     top: 0;
+
+    & input,
+    label {
+      display: block;
+    }
   }
 
   .options-container{
     background-color: white;
     flex: 1;
     padding: 15px;
+    overflow: auto;
   }
 
   .dropdown{
